--- a/CSS - My Site/css/styles.css
+++ b/CSS - My Site/css/styles.css
@@ -5,16 +5,37 @@ body {
 }
 
 h1 {
-    margin: 0;
+    margin: 0px auto 0px auto;
     font-family: 'Sacramento', cursive;
+    font-size: 5.625rem;
+    color: #66BFBF;
+    line-height: 2;
+    padding-top: 50px;
 }
 
 h2 {   
     font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
+    color: #66BFBF;
+    font-weight: normal;
+    margin: 0px;
 }
 
 h3 {
     font-family: 'Montserrat', sans-serif;
+    color: #11999E;
+}
+
+a {
+    color: #11999E;
+    font-family: 'Montserrat', sans-serif;
+}
+
+hr {
+    border-top: dotted 5px;
+    width: 5%;
+    margin: auto;
+    color: #40514E;
 }
 
 .pro {
@@ -24,7 +45,8 @@ h3 {
 .top-container {
     background-color: #E4F9F5;
     position: relative;
-    padding: 200px;
+    padding: 100px 100px 100px 100px;
+    margin-top: 0;
 }
 
 .top-cloud {
@@ -35,10 +57,120 @@ h3 {
 
 .bottom-cloud {
     position: absolute;
-    top: 300px;
+    bottom: 300px;
     left: 300px;
+}
+
+.mountain {
+    position: relative;
+    top: 100px;
+}
+
+.middle-container {
+    margin-bottom: 40px;
+}
+
+.profile {
+    color: #40514E;
+    line-height: 2;
+    padding-bottom: 75px;
 }
 
 .profile-pic {
     border-radius: 50%;
+    width: 12.5%;
+    margin-top: 75px;
+    margin-bottom: 25px;
 }
+
+.profile-text {
+    width: 25%;
+    margin: auto;
+}
+
+.skills {
+    padding-top: 100px;
+    color: #40514E;
+}
+
+.skill-row {
+    width: 50%;
+    margin: 100px auto;
+    text-align: left;
+    line-height: 2;
+}
+
+.code-img {
+    width: 25%;
+    margin-right: 30px;
+    float: left;
+    border-radius: 50%;
+}
+
+.learn-img {
+    width: 25%;
+    margin-left: 30px;
+    float: right;
+    border-radius: 50%;
+}
+
+.contact-me {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    line-height: 2;
+    color: #40514E;
+    width: 45%;
+    margin: auto;
+}
+
+.btn {
+    background: #11cdd4;
+    background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+    background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: 'Montserrat', sans-serif;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px;
+    text-decoration: none;
+    position: relative;
+    top: 50px;
+  }
+  
+  .btn:hover {
+    background: #30e3cb;
+    background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+    text-decoration: none;
+  }
+
+.bottom-container {
+    position: relative;
+    bottom: 0;
+    background-color: #66BFBF;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    line-height: 2;
+
+}
+
+.footer-link {
+    text-decoration: none;
+    padding: 20px;
+}
+
+.copyright {
+    position: relative;
+    top: 15px;
+    color: white;
+    font-size: small;
+}
+
