--- a/ToDoList v2/views/list.ejs
+++ b/ToDoList v2/views/list.ejs
@@ -5,15 +5,17 @@
 
 <div class="box">
     <% for (var i = 0; i < listOfItems.length; i++){ %>
-        <div class="item">
-            <input type="checkbox">
-            <p><%= listOfItems[i] %></p>
-        </div>            
+        <form action="/delete<%= nameOfList %>" method="post">
+            <div class="item">
+                    <input type="checkbox" name="checkbox" value=<%= listOfItems[i]._id %> onchange="this.form.submit()">
+                    <p><%= listOfItems[i].name %></p>            
+            </div> 
+        </form>           
     <% } %>
 
-    <form class="item" action="/" method="post">
+    <form class="item" action="/<%= nameOfList %>" method="post">
         <input type="text" name="item" placeholder="New Item" autocomplete="off">
-        <button type="submit" name="submit" value=<%= typeOfList %>>+</button>
+        <button type="submit" name="submit">+</button>
     </form>
 </div>
 <%- include("footer") -%> 
